--- a/ar_greyder.html
+++ b/ar_greyder.html
@@ -96,10 +96,10 @@
                         Доставка
                     </a>
                     <div class="dropdownMenu animated" aria-labelledby="navbarDropdown3">
-                        <a class="dropdown-item" href="#"><i class="fas fa-angle-right"></i> Асфальтная крошка</a>
-                        <a class="dropdown-item" href="#"><i class="fas fa-angle-right"></i> Доставка песка</a>
-                        <a class="dropdown-item" href="#"><i class="fas fa-angle-right"></i> Доставка щебня</a>
-                        <a class="dropdown-item" href="#"><i class="fas fa-angle-right"></i> доставка чернозема</a>
+                        <a class="dropdown-item" href="dost_asf_kroshki.html"><i class="fas fa-angle-right"></i> Асфальтная крошка</a>
+                        <a class="dropdown-item" href="dost_peska.html"><i class="fas fa-angle-right"></i> Доставка песка</a>
+                        <a class="dropdown-item" href="dost_shebnya.html"><i class="fas fa-angle-right"></i> Доставка щебня</a>
+                        <a class="dropdown-item" href="dost_chernozem.html"><i class="fas fa-angle-right"></i> доставка чернозема</a>
                     </div>
                 </li>
                 <li class="nav-item">
