--- a/dost_asf_kroshki.html
+++ b/dost_asf_kroshki.html
@@ -80,11 +80,15 @@
                         <a class="dropdown-item" href="ar_asfaltoukladchik.html"><i class="fas fa-angle-right"></i>
                             Аренда
                             асфальтоукладчика</a>
-                        <a class="dropdown-item" href="ar_ekskavator.html"><i class="fas fa-angle-right"></i> Экскаваторы</a>
-                        <a class="dropdown-item" href="ar_bulduzer.html"><i class="fas fa-angle-right"></i> БУЛЬДОЗЕР KOMATSU</a>
-                        <a class="dropdown-item" href="ar_kotka.html"><i class="fas fa-angle-right"></i> Аренда катка</a>
+                        <a class="dropdown-item" href="ar_ekskavator.html"><i class="fas fa-angle-right"></i>
+                            Экскаваторы</a>
+                        <a class="dropdown-item" href="ar_bulduzer.html"><i class="fas fa-angle-right"></i> БУЛЬДОЗЕР
+                            KOMATSU</a>
+                        <a class="dropdown-item" href="ar_kotka.html"><i class="fas fa-angle-right"></i> Аренда
+                            катка</a>
                         <a class="dropdown-item" href="ar_greyder.html"><i class="fas fa-angle-right"></i> ГРЕЙДЕР BOMAG</a>
-                        <a class="dropdown-item" href="ar_samosval.html"><i class="fas fa-angle-right"></i> Аренда самосвала</a>
+                        <a class="dropdown-item" href="ar_samosval.html"><i class="fas fa-angle-right"></i> Аренда
+                            самосвала</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -116,116 +120,50 @@
 
 </header>
 
-<section class="active_page d-flex align-items-center justify-content-center jcb_bg">
-    <h1 class="text-center">Экскаваторы</h1>
+<section class="active_page d-flex align-items-center justify-content-center asf_kroshka_bg">
+    <h1 class="text-center">Асфальтная крошка</h1>
 </section>
 
-<section class="jcb">
+<section class="asf_kroshka">
     <div class="container">
-        <div class="row mb-4 mb-lg-3">
+        <div class="row mb-4 mb-lg-5">
             <div class="col-12 col-lg-6 mb-4 mb-lg-0  d-flex align-items-center ">
                 <div>
                     <h2>
-                        АРЕНДА ЭКСКАВАТОРА — ПОГРУЗЧИКА JCB 3CX SUPER
+                        Асфальтная крошка
                     </h2>
-                    <div class="text-center text-md-left">
-                        Экскаватор-погрузчик предназначен для выполнения земляных и погрузочно-разгрузочных работ. С его
-                        помощью можно быстро справиться с такими задачами, как: рытье траншей и котлованов, разгрузка и
-                        погрузка строительных материалов или мусора.
+                    <div>
+                        Благодаря своему качеству и доступности асфальтная крошка очень популярный материал. Широко
+                        используется в отсыпке маленьких участков, таких как площадки возле загородных домов, подъезды к
+                        участкам, временные дороги. При строительстве дорог с маленькой загрузкой движения по ней (или
+                        временная дорога).
                     </div>
                 </div>
             </div>
-            <div class="col-12 text-center col-lg-6">
-                <img id="jcb" style="max-width: 40%; margin: auto" src="images/jcb.png" alt="jcb">
+            <div class="col-12 col-lg-6 text-center">
+                <img style="max-width: 60%" src="images/asf_kroshka.jpg" alt="asf_kroshka">
             </div>
         </div>
-        <div class="text-center text-md-left">
-            <b>Услуги экскаватора JCB 3CX SUPER используются для выполнения таких видов работ, как:</b>
-            <ul class="mt-2 mb-4">
-                <li>Строительные и дорожные работы;</li>
-                <li>Вывоз строительных материалов или мусора;</li>
-                <li>Рытье траншей, ям и котлованов;</li>
-                <li>Планировка территорий;</li>
-                <li>Корчевание и удаление деревьев или пней.</li>
-            </ul>
-            <h4>Особенности использования экскаватора JCB 3CX SUPER</h4>
-            <p>
-                В Киеве экскаватор-погрузчик предназначен для выполнения земляных и погрузочно-разгрузочных работ. С его
-                помощью можно быстро справиться с такими задачами, как: рытье траншей и котлованов, разгрузка и погрузка
-                строительных материалов или мусора.
-            </p>
-            <p>
-                Для выполнения строительных, ремонтных, погрузочно-разгрузочных работ используется спецтехника. С ее
-                помощью можно существенно сэкономить время, силы и средства. Но покупать такое оборудование невыгодно,
-                поскольку оно дорого стоит, а после использования нужно тратить средства на обслуживание и содержание
-                таких машин. Более рационально взять экскаватор JCB 3CX SUPER в аренду.
-            </p>
-            <table>
-                <tbody>
-                <tr>
-                    <td width="319"><strong>Технические характеристики</strong></td>
-                    <td width="308"><strong>JCB 3CX SUPER</strong></td>
-                </tr>
-                <tr>
-                    <td width="319">эксплуатационная масса, кг</td>
-                    <td width="308">8425</td>
-                </tr>
-                <tr>
-                    <td width="319">двигатель</td>
-                    <td width="308">JCB, с турбонаддувом</td>
-                </tr>
-                <tr>
-                    <td width="319">рабочий объем, л</td>
-                    <td width="308">4,4</td>
-                </tr>
-                <tr>
-                    <td width="319">мощность, кВт</td>
-                    <td width="308">68,6)</td>
-                </tr>
-                <tr>
-                    <td width="319">максимальная скорость вперед/назад км/ч</td>
-                    <td width="308">38,1/38,1</td>
-                </tr>
-                <tr>
-                    <td width="319">радиус поворота, м</td>
-                    <td width="308">8</td>
-                </tr>
-                <tr>
-                    <td colspan="2" width="626"><strong>Погрузочное оборудование</strong></td>
-                </tr>
-                <tr>
-                    <td width="319">вместимость ковша, м3</td>
-                    <td width="308">1</td>
-                </tr>
-                <tr>
-                    <td width="319">грузоподъемность, кг</td>
-                    <td width="308">4378</td>
-                </tr>
-                <tr>
-                    <td width="319">высота грузки, м</td>
-                    <td width="308">2,64</td>
-                </tr>
-                <tr>
-                    <td width="319">максимальный вылет, м</td>
-                    <td width="308">1,22</td>
-                </tr>
-                <tr>
-                    <td colspan="2" width="626"><strong>Экскаваторное оборудование</strong></td>
-                </tr>
-                <tr>
-                    <td width="319">глубина копания, мм</td>
-                    <td width="308">5580</td>
-                </tr>
-                <tr>
-                    <td width="319">высота выгрузки, мм</td>
-                    <td width="308">4670</td>
-                </tr>
-                <tr>
-                    <td width="319">вылет на уровне стоянки, мм</td>
-                    <td width="308">6540</td>
-                </tr>
-                </tbody>
-            </table>
+        <h4>Устройство временной дороги асфальтной крошкой проходит в такие этапы:</h4>
+        <ul>
+            <li>Первый этап это подготовка территории, проводится грейдером или бульдозером. Поверхность надо выровнять
+                и очистить от лишних предметов (корни деревьев, большие камни).
+            </li>
+            <li>Следующим этап — это отсыпка территории щебнем слоем в 10-15 см. После отсыпки щебень укатывают
+                катком.
+            </li>
+            <li>После достижения ровной поверхности, производится отсыпка крошкой, стандартная высота слоя составляет 5
+                – 7 см.
+            </li>
+            <li>Последний этап — это уплотнение слоя дорожным катком. Для того что бы уплотнение было качественным его
+                производят катком весом от 7 тонн. Битум который есть в составе асфальтной крошки обеспечивает хорошее
+                уплотнение полотна.
+            </li>
+        </ul>
+        <div>
+            Такое устройство временной дороги из асфальтной крошки может быть отличным основанием под качественную
+            асфальтную дорогу. Если технология и этапы выдержаны правильно, то даже через год используя битумную
+            эмульсию и горячий асфальт мы получим отличное асфальтное покрытие.
         </div>
     </div>
 </section>
