--- a/dost_chernozem.html
+++ b/dost_chernozem.html
@@ -80,11 +80,15 @@
                         <a class="dropdown-item" href="ar_asfaltoukladchik.html"><i class="fas fa-angle-right"></i>
                             Аренда
                             асфальтоукладчика</a>
-                        <a class="dropdown-item" href="ar_ekskavator.html"><i class="fas fa-angle-right"></i> Экскаваторы</a>
-                        <a class="dropdown-item" href="ar_bulduzer.html"><i class="fas fa-angle-right"></i> БУЛЬДОЗЕР KOMATSU</a>
-                        <a class="dropdown-item" href="ar_kotka.html"><i class="fas fa-angle-right"></i> Аренда катка</a>
+                        <a class="dropdown-item" href="ar_ekskavator.html"><i class="fas fa-angle-right"></i>
+                            Экскаваторы</a>
+                        <a class="dropdown-item" href="ar_bulduzer.html"><i class="fas fa-angle-right"></i> БУЛЬДОЗЕР
+                            KOMATSU</a>
+                        <a class="dropdown-item" href="ar_kotka.html"><i class="fas fa-angle-right"></i> Аренда
+                            катка</a>
                         <a class="dropdown-item" href="ar_greyder.html"><i class="fas fa-angle-right"></i> ГРЕЙДЕР BOMAG</a>
-                        <a class="dropdown-item" href="ar_samosval.html"><i class="fas fa-angle-right"></i> Аренда самосвала</a>
+                        <a class="dropdown-item" href="ar_samosval.html"><i class="fas fa-angle-right"></i> Аренда
+                            самосвала</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -116,116 +120,33 @@
 
 </header>
 
-<section class="active_page d-flex align-items-center justify-content-center jcb_bg">
-    <h1 class="text-center">Экскаваторы</h1>
+<section class="active_page d-flex align-items-center justify-content-center chernozem">
+    <h1 class="text-center">доставка чернозема</h1>
 </section>
 
-<section class="jcb">
+<section class="asf_kroshka">
     <div class="container">
-        <div class="row mb-4 mb-lg-3">
+        <div class="row mb-4 mb-lg-5">
             <div class="col-12 col-lg-6 mb-4 mb-lg-0  d-flex align-items-center ">
                 <div>
                     <h2>
-                        АРЕНДА ЭКСКАВАТОРА — ПОГРУЗЧИКА JCB 3CX SUPER
+                        доставка чернозема
                     </h2>
-                    <div class="text-center text-md-left">
-                        Экскаватор-погрузчик предназначен для выполнения земляных и погрузочно-разгрузочных работ. С его
-                        помощью можно быстро справиться с такими задачами, как: рытье траншей и котлованов, разгрузка и
-                        погрузка строительных материалов или мусора.
+                    <div>
+                        История чернозема насчитывает много лет. По сей день этот материал пользуется большим спросом в
+                        сельском хозяйстве благодаря высокому содержанию гумуса. Чернозем образовывается преимущественно
+                        в местах, где выпадает незначительное количество осадков в среде естественного перегноя
+                        растений, тем самым накапливая и сохраняя органические и минеральные элементы. С течением
+                        времени чернозем приобретал высокую плотность и как следствие - низкую воздухопроницаемость.
+                        Поэтому не используется в чистом виде, а перемешивается с песком или иным пористым грунтом для
+                        обеспечения водно-воздушной проницаемости, достаточной для комфортного роста растений, отдавая
+                        все накопленные питательные элементы их корням.
                     </div>
                 </div>
             </div>
-            <div class="col-12 text-center col-lg-6">
-                <img id="jcb" style="max-width: 40%; margin: auto" src="images/jcb.png" alt="jcb">
+            <div class="col-12 col-lg-6 text-center">
+                <img style="max-width: 100%" src="images/chernozem.jpg" alt="dost_shebnya">
             </div>
-        </div>
-        <div class="text-center text-md-left">
-            <b>Услуги экскаватора JCB 3CX SUPER используются для выполнения таких видов работ, как:</b>
-            <ul class="mt-2 mb-4">
-                <li>Строительные и дорожные работы;</li>
-                <li>Вывоз строительных материалов или мусора;</li>
-                <li>Рытье траншей, ям и котлованов;</li>
-                <li>Планировка территорий;</li>
-                <li>Корчевание и удаление деревьев или пней.</li>
-            </ul>
-            <h4>Особенности использования экскаватора JCB 3CX SUPER</h4>
-            <p>
-                В Киеве экскаватор-погрузчик предназначен для выполнения земляных и погрузочно-разгрузочных работ. С его
-                помощью можно быстро справиться с такими задачами, как: рытье траншей и котлованов, разгрузка и погрузка
-                строительных материалов или мусора.
-            </p>
-            <p>
-                Для выполнения строительных, ремонтных, погрузочно-разгрузочных работ используется спецтехника. С ее
-                помощью можно существенно сэкономить время, силы и средства. Но покупать такое оборудование невыгодно,
-                поскольку оно дорого стоит, а после использования нужно тратить средства на обслуживание и содержание
-                таких машин. Более рационально взять экскаватор JCB 3CX SUPER в аренду.
-            </p>
-            <table>
-                <tbody>
-                <tr>
-                    <td width="319"><strong>Технические характеристики</strong></td>
-                    <td width="308"><strong>JCB 3CX SUPER</strong></td>
-                </tr>
-                <tr>
-                    <td width="319">эксплуатационная масса, кг</td>
-                    <td width="308">8425</td>
-                </tr>
-                <tr>
-                    <td width="319">двигатель</td>
-                    <td width="308">JCB, с турбонаддувом</td>
-                </tr>
-                <tr>
-                    <td width="319">рабочий объем, л</td>
-                    <td width="308">4,4</td>
-                </tr>
-                <tr>
-                    <td width="319">мощность, кВт</td>
-                    <td width="308">68,6)</td>
-                </tr>
-                <tr>
-                    <td width="319">максимальная скорость вперед/назад км/ч</td>
-                    <td width="308">38,1/38,1</td>
-                </tr>
-                <tr>
-                    <td width="319">радиус поворота, м</td>
-                    <td width="308">8</td>
-                </tr>
-                <tr>
-                    <td colspan="2" width="626"><strong>Погрузочное оборудование</strong></td>
-                </tr>
-                <tr>
-                    <td width="319">вместимость ковша, м3</td>
-                    <td width="308">1</td>
-                </tr>
-                <tr>
-                    <td width="319">грузоподъемность, кг</td>
-                    <td width="308">4378</td>
-                </tr>
-                <tr>
-                    <td width="319">высота грузки, м</td>
-                    <td width="308">2,64</td>
-                </tr>
-                <tr>
-                    <td width="319">максимальный вылет, м</td>
-                    <td width="308">1,22</td>
-                </tr>
-                <tr>
-                    <td colspan="2" width="626"><strong>Экскаваторное оборудование</strong></td>
-                </tr>
-                <tr>
-                    <td width="319">глубина копания, мм</td>
-                    <td width="308">5580</td>
-                </tr>
-                <tr>
-                    <td width="319">высота выгрузки, мм</td>
-                    <td width="308">4670</td>
-                </tr>
-                <tr>
-                    <td width="319">вылет на уровне стоянки, мм</td>
-                    <td width="308">6540</td>
-                </tr>
-                </tbody>
-            </table>
         </div>
     </div>
 </section>
