--- a/index.html
+++ b/index.html
@@ -55,43 +55,56 @@
                     <a class="nav-link" href="/">Главная</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="javascript:void(0);" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Услуги
                     </a>
-                    <div class="dropdownMenu animated" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="asfaltirovanie.html"><i class="fas fa-angle-right"></i> Асфальтирование</a>
-                        <a class="dropdown-item" href="otsipka.html"><i class="fas fa-angle-right"></i> Отсыпка дорог</a>
-                        <a class="dropdown-item" href="plitka.html"><i class="fas fa-angle-right"></i> Укладка тротуарной
+                    <div class="dropdown-menu animated" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="asfaltirovanie.html"><i class="fas fa-angle-right"></i>
+                            Асфальтирование</a>
+                        <a class="dropdown-item" href="otsipka.html"><i class="fas fa-angle-right"></i> Отсыпка
+                            дорог</a>
+                        <a class="dropdown-item" href="plitka.html"><i class="fas fa-angle-right"></i> Укладка
+                            тротуарной
                             плитки</a>
-                        <a class="dropdown-item" href="bordur.html"><i class="fas fa-angle-right"></i> Установка бордюров</a>
+                        <a class="dropdown-item" href="bordur.html"><i class="fas fa-angle-right"></i> Установка
+                            бордюров</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+                    <a class="nav-link dropdown-toggle" href="javascript:void(0);" id="navbarDropdown2" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Аренда
                     </a>
-                    <div class="dropdownMenu animated" aria-labelledby="navbarDropdown2">
-                        <a class="dropdown-item" href="ar_asfaltoukladchik.html"><i class="fas fa-angle-right"></i> Аренда
+                    <div class="dropdown-menu animated" aria-labelledby="navbarDropdown2">
+                        <a class="dropdown-item" href="ar_asfaltoukladchik.html"><i class="fas fa-angle-right"></i>
+                            Аренда
                             асфальтоукладчика</a>
-                        <a class="dropdown-item" href="ar_ekskavator.html"><i class="fas fa-angle-right"></i> Экскаваторы</a>
-                        <a class="dropdown-item" href="ar_bulduzer.html"><i class="fas fa-angle-right"></i> БУЛЬДОЗЕР KOMATSU</a>
-                        <a class="dropdown-item" href="ar_kotka.html"><i class="fas fa-angle-right"></i> Аренда катка</a>
+                        <a class="dropdown-item" href="ar_ekskavator.html"><i class="fas fa-angle-right"></i>
+                            Экскаваторы</a>
+                        <a class="dropdown-item" href="ar_bulduzer.html"><i class="fas fa-angle-right"></i> БУЛЬДОЗЕР
+                            KOMATSU</a>
+                        <a class="dropdown-item" href="ar_kotka.html"><i class="fas fa-angle-right"></i> Аренда
+                            катка</a>
                         <a class="dropdown-item" href="ar_greyder.html"><i class="fas fa-angle-right"></i> ГРЕЙДЕР BOMAG</a>
-                        <a class="dropdown-item" href="ar_samosval.html"><i class="fas fa-angle-right"></i> Аренда самосвала</a>
+                        <a class="dropdown-item" href="ar_samosval.html"><i class="fas fa-angle-right"></i> Аренда
+                            самосвала</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button"
+                    <a class="nav-link dropdown-toggle" href="javascript:void(0);" id="navbarDropdown3" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Доставка
                     </a>
-                    <div class="dropdownMenu animated" aria-labelledby="navbarDropdown3">
-                        <a class="dropdown-item" href="dost_asf_kroshki.html"><i class="fas fa-angle-right"></i> Асфальтная крошка</a>
-                        <a class="dropdown-item" href="dost_peska.html"><i class="fas fa-angle-right"></i> Доставка песка</a>
-                        <a class="dropdown-item" href="dost_shebnya.html"><i class="fas fa-angle-right"></i> Доставка щебня</a>
-                        <a class="dropdown-item" href="dost_chernozem.html"><i class="fas fa-angle-right"></i> доставка чернозема</a>
+                    <div class="dropdown-menu animated" aria-labelledby="navbarDropdown3">
+                        <a class="dropdown-item" href="dost_asf_kroshki.html"><i class="fas fa-angle-right"></i>
+                            Асфальтная крошка</a>
+                        <a class="dropdown-item" href="dost_peska.html"><i class="fas fa-angle-right"></i> Доставка
+                            песка</a>
+                        <a class="dropdown-item" href="dost_shebnya.html"><i class="fas fa-angle-right"></i> Доставка
+                            щебня</a>
+                        <a class="dropdown-item" href="dost_chernozem.html"><i class="fas fa-angle-right"></i> доставка
+                            чернозема</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -101,9 +114,12 @@
                     <a class="nav-link" id="cont" href="#contacts">Контакты</a>
                 </li>
             </ul>
-            <span class="navbar-text">
+            <span class="navbar-text d-flex align-items-center flex-column">
                 <a href="tel:+79190086959" class="nav-link">
                     <i class="fas fa-phone-alt"></i> +79190086959
+                </a>
+                <a href="tel:+79290300240" class="nav-link">
+                    <i class="fas fa-phone-alt"></i> +79290300240
                 </a>
             </span>
         </div>
@@ -375,8 +391,11 @@
                     <div class="col-12 col-sm-3 mt-5 mt-sm-0 text-center text-sm-left d-flex align-items-center justify-content-start flex-column">
                         <h5>соцсети</h5>
                         <div class="d-flex justify-content-center align-items-center flex-sm-column">
-                            <a class="soc-icon" href="https://www.facebook.com/babken.saribekyan.14" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a class="soc-icon mx-2 mx-sm-0" href="https://www.instagram.com/art_one96/?igshid=8wlnqqldyihv" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a class="soc-icon" href="https://www.facebook.com/babken.saribekyan.14" target="_blank"><i
+                                    class="fab fa-facebook-f"></i></a>
+                            <a class="soc-icon mx-2 mx-sm-0"
+                               href="https://www.instagram.com/art_one96/?igshid=8wlnqqldyihv" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
                             <a class="soc-icon" href="https://t.me/ART_one96"><i class="fab fa-telegram-plane"></i></a>
                         </div>
                     </div>
