--- a/ar_bulduzer.html
+++ b/ar_bulduzer.html
@@ -59,7 +59,7 @@
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Услуги
                     </a>
-                    <div class="dropdownMenu animated" aria-labelledby="navbarDropdown">
+                    <div class="dropdown-menu animated" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="asfaltirovanie.html"><i class="fas fa-angle-right"></i>
                             Асфальтирование</a>
                         <a class="dropdown-item" href="otsipka.html"><i class="fas fa-angle-right"></i> Отсыпка
@@ -76,7 +76,7 @@
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Аренда
                     </a>
-                    <div class="dropdownMenu animated" aria-labelledby="navbarDropdown2">
+                    <div class="dropdown-menu animated" aria-labelledby="navbarDropdown2">
                         <a class="dropdown-item" href="ar_asfaltoukladchik.html"><i class="fas fa-angle-right"></i>
                             Аренда
                             асфальтоукладчика</a>
@@ -93,7 +93,7 @@
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Доставка
                     </a>
-                    <div class="dropdownMenu animated" aria-labelledby="navbarDropdown3">
+                    <div class="dropdown-menu animated" aria-labelledby="navbarDropdown3">
                         <a class="dropdown-item" href="dost_asf_kroshki.html"><i class="fas fa-angle-right"></i> Асфальтная крошка</a>
                         <a class="dropdown-item" href="dost_peska.html"><i class="fas fa-angle-right"></i> Доставка песка</a>
                         <a class="dropdown-item" href="dost_shebnya.html"><i class="fas fa-angle-right"></i> Доставка щебня</a>
@@ -107,9 +107,12 @@
                     <a class="nav-link" id="cont" href="#contacts">Контакты</a>
                 </li>
             </ul>
-            <span class="navbar-text">
+            <span class="navbar-text d-flex align-items-center flex-column">
                 <a href="tel:+79190086959" class="nav-link">
                     <i class="fas fa-phone-alt"></i> +79190086959
+                </a>
+                <a href="tel:+79290300240" class="nav-link">
+                    <i class="fas fa-phone-alt"></i> +79290300240
                 </a>
             </span>
         </div>
